syntax = "proto3";

package rivet.backend.net;

message ClientInfo {
	optional string user_agent = 1;
	optional string remote_address = 2;
}

message IpInfo {
	reserved 2, 3;
	string ip = 1;
	Coordinates coords = 4;
}

message Coordinates {
	double latitude = 1;
	double longitude = 2;
}

enum HttpMethod {
	GET = 0;
	POST = 1;
	PUT = 2;
	DELETE = 3;
}

message ExternalRequestConfig {
	string url = 1;
	HttpMethod method = 2;
	map<string, string> headers = 3;
}
